--- a/templates/todos.html
+++ b/templates/todos.html
@@ -14,6 +14,7 @@
         <h1>Django Todo Demo</h1>
     </div>
     <form action="/todo/add" method="post">
+        {% csrf_token %}
         <div class="input-group">
             <input id="todo-content" class="form-control input-lg" type="text" name="content" placeholder="新建一个待办事项……"/>
             <span class="input-group-btn">
@@ -46,9 +47,11 @@
       {% for todo in todos %}
         <li class="list-group-item">
           <form class="pull-right" action="{% url 'delete' todo.id 0 %}" method="post" id=delete-{{todo.id}}>
+              {% csrf_token %}
             <span class="glyphicon glyphicon-trash todo-delete"></span>
           </form>
           <form action="{% url 'done' todo.id 0 %}" method="post" id="done-{{todo.id}}">
+              {% csrf_token %}
             <span class="glyphicon glyphicon-unchecked"></span> {{ todo.content }}
           </form>
         </li>
@@ -59,9 +62,11 @@
       {% for todo in todos %}
         <li class="list-group-item">
           <form class="pull-right" action="{% url 'delete' todo.id 1 %}" method="post" id=delete-{{todo.id}}>
+              {% csrf_token %}
             <span class="glyphicon glyphicon-trash todo-delete"></span>
           </form>
           <form action="{% url 'undone' todo.id 1 %}" method="post" id="undone-{{todo.id}}">
+              {% csrf_token %}
             <span class="glyphicon glyphicon-check text-muted"></span> <del class="text-muted">{{ todo.content }}</del>
           </form>
         </li>
